# prime

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  Untitled.ipynb  data0  debug_flex.py  master.py  meow.csv  meow.py  meow.sh  meow0.sh  meow1.sh  meow2.sh  pyproject.toml  rl.toml  run_swebench_example.sh  test_async_concurrency.py  test_sdk.py  test_upload_download.sh  topo.csv  train_ddp.py  train_dpu.py  woof.py  woof.sh  woof1.sh  woof2.sh
.codex/environments/: environment.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  format-lint.yml  gpu.yml  pod-lifecycle-test.yml  prime-release-e2e.yml  release-e2e.yml  release-evals.yml  release-mcp.yml  release-prime-core.yml  release-prime-intellect-core.yml  release-prime.yml  release-sandboxes.yml  release-tunnel.yml  release.yml  ruff.yml  tag_version.yml
configs/: rl.toml  test.toml
configs/10B/: H100.toml  H100_cooldown.toml  H100_cpuoptim.toml  H100_debug.toml  H100_defaults.toml  H100_devel.toml  H100_intellect1.toml  H100_simple.toml
configs/13B/: H100.toml
configs/150M/: 3090.toml  A100_debug.toml  A40.toml  H100-fast.toml  H100.toml  H100_best.toml
configs/150M_big_bs/: H100.toml
configs/150M_short/: 3090.toml  A40.toml  H100.toml
configs/1B/: H100.toml  H100_c4.toml  H100_llama2_edu.toml  H100_llama2_edu_no_feat.toml  H100_llama3.toml  H100_llama_c4.toml  H100_llama_edu.toml
configs/1B_diloco/: H100.toml
configs/70M/: H100.toml
configs/7B/: H100.toml
configs/7B_diloco/: H100.toml
configs/debug/: data.toml  diloco.toml  exact.toml  normal.toml
docs/: cli.md  configuration.md  environments.md  evals.md  index.md  installation.md  mcp.md  mint.json  rl-config.md  sandboxes.md  verifiers-v1-cli.md
examples/: README.md  create_sandboxes_parallel.py  eval_example.json  list-pods.py  rl_config.toml  sandbox_async_demo.py  sandbox_async_high_volume_demo.py  sandbox_demo.py  sandbox_file_handling_stress_test.py  sandbox_file_operations.py  sandbox_long_timeout_test.py  sandbox_multi_upload_stress_test.py  sandbox_port_expose_demo.py  sandbox_qos_measurement.py  sandbox_tailscale.py  swebench_example.py
examples/sandbox/: sandbox_async_high_volume_demo.py  sandbox_cp_demo.py  sandbox_file_operations.py  sandbox_folder_operations.py  sandbox_tailscale.py
examples/swebench_example/: README.md  swebench_example.py
examples/verifiers_example/: metadata.json  results.jsonl
llama-debug/: config.json
scripts/: all_reduce.py  convert_dl_ckpt.sh  convert_dl_state.py  export_dcp.py  mem_use.py  simple_gloo.py  simulate_multi_node_diloco.sh  skip_data.py  subset_data.py  swap_check.py  worker7
scripts/install/: install.sh
scripts/interconnect_test/: .gitignore  README.md  inventory.yml  inventory.yml.sample  playbook.yml
src/prime_cli/: __init__.py  config.py  main.py  utils.py
src/prime_cli/api/: availability.py  client.py  evals.py  inference.py  pods.py  sandbox.py
src/prime_cli/commands/: availability.py  config.py  env.py  evals.py  inference.py  login.py  pods.py  sandbox.py  teams.py  utils.py
src/prime_cli/helper/: short_id.py
src/prime_cli/sdk/: __init__.py  sandbox.py
src/prime_cli/utils/: __init__.py  debug.py  display.py  formatters.py  prompt.py  sandbox.py  time_utils.py
src/zeroband/: app.py  ccoip_master.py  checkpoint.py  collectives.py  comms.py  config.py  data.py  diloco.py  dpu.py  global_ddp.py  inference.py  loss.py  lr_scheduler.py  master.py  muon.py  optimizers.py  powersgd.py  train.py
src/zeroband/C/: communicator.py
src/zeroband/ccl/: ccl_utils.py  nccl_ccllib.py  pccl_ccllib.py  pccl_utils.py
src/zeroband/checkpointingv2/: __init__.py  common.py  optim_state_utils.py  simple_ckpt_manager.py
src/zeroband/models/: norms.py
sweeps/: adam.yaml  diloco.yaml
test-docker/: Dockerfile
tests/: test_availability.py  test_configs.py  test_data.py  test_flops_promised.py  test_model.py  test_nibble_dataset.py  test_read_nibbles.py  test_sandbox_cp.sh
tests/data/: availability_response.json
tests/lrscheds/: test_learning_rate_schedulers.py
tests/test_dist/: test_comms.py  test_diloco.py
tests/test_torchrun/: test_train.py
tests/utils/: test_shared_int_deque.py
(+36 files in other folders)
