[project]
name = "zeroband"
version = "0.1.0"
description = "ZeroBand is a production ready codebase for decentralized training of LLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.6.0",
    "numpy",
    "setuptools",
    "transformers>=4.44.2",
    "datasets>=3.0.0",
    "pydantic_config @ git+https://github.com/samsja/pydantic_config.git@b7becc3",
    "torchdata>=0.8.0",
    "fsspec[gcs]>=2024.3.1",
    "ninja",
    "zstandard",
    "pyarrow",
    "psutil",
    "wandb",
]

[project.optional-dependencies]

all = ["lm-eval"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true # allow direct references to git repos in dependencies

[tool.ruff]
line-length = 120

[tool.uv]
dev-dependencies = ["ruff>=0.5.0", "pre-commit>=3.0.0","pytest>=7.0.0", "faker"]
