[project]
name = "prime-cli"
version = "0.3.6"
description = "Prime Intellect CLI"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "MIT"
authors = [
    { name = "Prime Intellect", email = "contact@primeintellect.ai" }
]
dependencies = [
    "typer>=0.9.0",
    "requests>=2.31.0",
    "rich>=13.3.1",  
    "pydantic>=2.0.0",
    "cryptography>=41.0.0",
    "verifiers>=0.1.2",
    "build>=1.0.0",
    "toml>=0.10.0"
]
keywords = ["cli", "gpu", "cloud", "compute"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://github.com/PrimeIntellect-ai/prime-cli"
Documentation = "https://github.com/PrimeIntellect-ai/prime-cli#readme"
Repository = "https://github.com/PrimeIntellect-ai/prime-cli.git"
Changelog = "https://github.com/PrimeIntellect-ai/prime-cli/blob/main/CHANGELOG.md"

[project.scripts]
prime = "prime_cli.main:run"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.8",      
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
    "types-toml>=0.10.0",
    "pre-commit>=3.5.0"    
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
src = ["."]
line-length = 100 
target-version = "py311"

[tool.ruff.lint]
extend-select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import sorting)
]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true 
[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "verifiers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "toml"
ignore_missing_imports = true